# Bmad_method_repo

./: .env.example  .gitignore  README.md
_bmad-output/implementation-artifacts/: 1-1-initialize-the-split-web-and-api-applications.md  1-2-build-the-context-input-form.md  1-3-validate-inputs-and-guide-corrections.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd-validation-report.md  prd.md  product-brief-bmad-poc-2026-03-12.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  cline.yaml  codex.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: recommendations.py
apps/api/app/models/: __init__.py
apps/api/app/repositories/: __init__.py
apps/api/tests/: test_health.py
apps/web/: README.md  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/recommendations/: page.tsx
apps/web/src/features/recommendation-flow/: context-input-form.tsx  recommendation-flow.test.tsx  recommendation-flow.tsx  recommendation-results.tsx
